Fixed alignment issues in the footer

--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,11 @@ h1, h2, h3, h4, h5, body {
   bottom: 0;
   width: 100%;
 } 
+
+.text-footer {
+  margin-bottom: 0;
+}
+
+.nav > li > a {
+  padding: 0;
+}
